--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -62,3 +62,5 @@ jobs:
         uses: actions/deploy-pages@v4
         with:
           artifact_name: nuxt-artifact
+          branch: gh-pages  # Especifica la rama de despliegue
+          folder: .output/public  # Asegúrate de que este sea el nombre correcto
