--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -57,10 +57,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: nuxt-artifact
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}  # Ensure you're using the GitHub token
           artifact_name: nuxt-artifact
-          branch: gh-pages  # Especifica la rama de despliegue
-          folder: .output/public  # Asegúrate de que este sea el nombre correcto
