--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: nuxt-artifact  # Artifact name
+          name: nuxt-artifact
           path: .output/public
 
   deploy:
@@ -57,14 +57,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: nuxt-artifact  # Ensure this matches the upload name
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          # The folder parameter needs to be set to the path of the downloaded artifact
-          folder: .output/public
+          # No need for download-artifact step or folder parameter
